[package]
name = "track_my_stuff_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
thiserror = "1.0" 
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde_derive = "1.0.215"
diesel_migrations = { version = "2.2.0" , features = ["postgres"]}

