[package]
name = "track_my_stuff_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
thiserror = "1.0" 
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde_derive = "1.0.215"
diesel_migrations = { version = "2.2.0" , features = ["postgres"]}
r2d2 = "0.8.10"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.132"
actix-http = "3.9.0"

